[tool.poetry]
name = "kegstand"
version = "0.1.0"
description = "The Developer's Toolbelt For Accelerating Mean-Time-To-Party on AWS"
authors = ["JensRoland <mail@jensroland.com>"]
license = "MIT"

[tool.poetry.dependencies]
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^2.10.0"}
pyjwt = "^2.1.0"
python = "^3.9"
tomli = { version = "^2.0.1", python = "<3.11" }

[tool.poetry.group.dev.dependencies]
coverage = "^6.0"
pytest = "^6.2.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
